mediawiki-antlr-web/Gen/MediawikiParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Michał/Documents/GitHub/mediawiki-antlr-jfik-web/mediawiki-antlr-web/Gen\Mediawiki.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace mediawiki_antlr_web.Gen {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class MediawikiParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, ITALIC=17, 
		BOLD=18, BOLD_ITALIC=19, H1=20, H2=21, H3=22, H4=23, H5=24, H6=25, HRLINE=26, 
		CHARACTER=27, WHITESPACE=28, NL=29;
	public const int
		RULE_document = 0, RULE_line = 1, RULE_formatted = 2, RULE_unformatted = 3, 
		RULE_italic = 4, RULE_bold = 5, RULE_bold_italic = 6, RULE_heading = 7, 
		RULE_heading1 = 8, RULE_heading2 = 9, RULE_heading3 = 10, RULE_heading4 = 11, 
		RULE_heading5 = 12, RULE_heading6 = 13, RULE_horizontal_line = 14, RULE_list = 15, 
		RULE_unordered_list = 16, RULE_ordered_list = 17, RULE_unordered_list_item = 18, 
		RULE_ordered_list_item = 19, RULE_list_item_content = 20, RULE_paragraph = 21, 
		RULE_content = 22, RULE_link = 23, RULE_external_link = 24, RULE_internal_link = 25, 
		RULE_external_link_uri = 26, RULE_external_link_title = 27, RULE_internal_link_ref = 28, 
		RULE_internal_link_title = 29, RULE_image = 30, RULE_image_filename = 31, 
		RULE_image_caption = 32, RULE_table = 33, RULE_table_row_separator = 34, 
		RULE_table_row = 35, RULE_table_cell = 36, RULE_plaintext = 37;
	public static readonly string[] ruleNames = {
		"document", "line", "formatted", "unformatted", "italic", "bold", "bold_italic", 
		"heading", "heading1", "heading2", "heading3", "heading4", "heading5", 
		"heading6", "horizontal_line", "list", "unordered_list", "ordered_list", 
		"unordered_list_item", "ordered_list_item", "list_item_content", "paragraph", 
		"content", "link", "external_link", "internal_link", "external_link_uri", 
		"external_link_title", "internal_link_ref", "internal_link_title", "image", 
		"image_filename", "image_caption", "table", "table_row_separator", "table_row", 
		"table_cell", "plaintext"
	};

	private static readonly string[] _LiteralNames = {
		null, "'*'", "'#'", "'['", "']'", "'[['", "'|'", "']]'", "'http'", "'https'", 
		"'://'", "'.'", "'[[File:'", "'{|'", "'|}'", "'|-'", "'||'", "''''", "'''''", 
		"'''''''", "'='", "'=='", "'==='", "'===='", "'====='", "'======'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "ITALIC", "BOLD", "BOLD_ITALIC", "H1", "H2", 
		"H3", "H4", "H5", "H6", "HRLINE", "CHARACTER", "WHITESPACE", "NL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Mediawiki.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MediawikiParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MediawikiParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MediawikiParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MediawikiParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(MediawikiParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(MediawikiParser.NL, i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			line();
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NL) {
				{
				{
				State = 77;
				Match(NL);
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__4) | (1L << T__7) | (1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << ITALIC) | (1L << BOLD) | (1L << BOLD_ITALIC) | (1L << H1) | (1L << H2) | (1L << H3) | (1L << H4) | (1L << H5) | (1L << H6) | (1L << HRLINE) | (1L << CHARACTER) | (1L << WHITESPACE))) != 0)) {
					{
					State = 78;
					line();
					}
				}

				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 86;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Horizontal_lineContext horizontal_line() {
			return GetRuleContext<Horizontal_lineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HeadingContext heading() {
			return GetRuleContext<HeadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParagraphContext paragraph() {
			return GetRuleContext<ParagraphContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImageContext image() {
			return GetRuleContext<ImageContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 94;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case HRLINE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 88;
				horizontal_line();
				}
				break;
			case T__0:
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 89;
				list();
				}
				break;
			case H1:
			case H2:
			case H3:
			case H4:
			case H5:
			case H6:
				EnterOuterAlt(_localctx, 3);
				{
				State = 90;
				heading();
				}
				break;
			case T__2:
			case T__4:
			case T__7:
			case T__8:
			case ITALIC:
			case BOLD:
			case BOLD_ITALIC:
			case CHARACTER:
			case WHITESPACE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 91;
				paragraph();
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 5);
				{
				State = 92;
				image();
				}
				break;
			case T__12:
				EnterOuterAlt(_localctx, 6);
				{
				State = 93;
				table();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormattedContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ItalicContext italic() {
			return GetRuleContext<ItalicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoldContext bold() {
			return GetRuleContext<BoldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bold_italicContext bold_italic() {
			return GetRuleContext<Bold_italicContext>(0);
		}
		public FormattedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formatted; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormatted(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormattedContext formatted() {
		FormattedContext _localctx = new FormattedContext(Context, State);
		EnterRule(_localctx, 4, RULE_formatted);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ITALIC:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96;
				italic();
				}
				break;
			case BOLD:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97;
				bold();
				}
				break;
			case BOLD_ITALIC:
				EnterOuterAlt(_localctx, 3);
				{
				State = 98;
				bold_italic();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnformattedContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LinkContext[] link() {
			return GetRuleContexts<LinkContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LinkContext link(int i) {
			return GetRuleContext<LinkContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaintextContext[] plaintext() {
			return GetRuleContexts<PlaintextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaintextContext plaintext(int i) {
			return GetRuleContext<PlaintextContext>(i);
		}
		public UnformattedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unformatted; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnformatted(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnformattedContext unformatted() {
		UnformattedContext _localctx = new UnformattedContext(Context, State);
		EnterRule(_localctx, 6, RULE_unformatted);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 103;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case T__2:
					case T__4:
					case T__7:
					case T__8:
						{
						State = 101;
						link();
						}
						break;
					case CHARACTER:
					case WHITESPACE:
						{
						State = 102;
						plaintext();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 105;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItalicContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ITALIC() { return GetTokens(MediawikiParser.ITALIC); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ITALIC(int i) {
			return GetToken(MediawikiParser.ITALIC, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UnformattedContext unformatted() {
			return GetRuleContext<UnformattedContext>(0);
		}
		public ItalicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_italic; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItalic(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItalicContext italic() {
		ItalicContext _localctx = new ItalicContext(Context, State);
		EnterRule(_localctx, 8, RULE_italic);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			Match(ITALIC);
			State = 108;
			unformatted();
			State = 109;
			Match(ITALIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoldContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BOLD() { return GetTokens(MediawikiParser.BOLD); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOLD(int i) {
			return GetToken(MediawikiParser.BOLD, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UnformattedContext unformatted() {
			return GetRuleContext<UnformattedContext>(0);
		}
		public BoldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bold; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBold(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BoldContext bold() {
		BoldContext _localctx = new BoldContext(Context, State);
		EnterRule(_localctx, 10, RULE_bold);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(BOLD);
			State = 112;
			unformatted();
			State = 113;
			Match(BOLD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bold_italicContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BOLD_ITALIC() { return GetTokens(MediawikiParser.BOLD_ITALIC); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOLD_ITALIC(int i) {
			return GetToken(MediawikiParser.BOLD_ITALIC, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UnformattedContext unformatted() {
			return GetRuleContext<UnformattedContext>(0);
		}
		public Bold_italicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bold_italic; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBold_italic(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Bold_italicContext bold_italic() {
		Bold_italicContext _localctx = new Bold_italicContext(Context, State);
		EnterRule(_localctx, 12, RULE_bold_italic);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(BOLD_ITALIC);
			State = 116;
			unformatted();
			State = 117;
			Match(BOLD_ITALIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Heading1Context heading1() {
			return GetRuleContext<Heading1Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Heading2Context heading2() {
			return GetRuleContext<Heading2Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Heading3Context heading3() {
			return GetRuleContext<Heading3Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Heading4Context heading4() {
			return GetRuleContext<Heading4Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Heading5Context heading5() {
			return GetRuleContext<Heading5Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Heading6Context heading6() {
			return GetRuleContext<Heading6Context>(0);
		}
		public HeadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeadingContext heading() {
		HeadingContext _localctx = new HeadingContext(Context, State);
		EnterRule(_localctx, 14, RULE_heading);
		try {
			State = 125;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case H1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 119;
				heading1();
				}
				break;
			case H2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 120;
				heading2();
				}
				break;
			case H3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 121;
				heading3();
				}
				break;
			case H4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 122;
				heading4();
				}
				break;
			case H5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 123;
				heading5();
				}
				break;
			case H6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 124;
				heading6();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Heading1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H1() { return GetTokens(MediawikiParser.H1); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H1(int i) {
			return GetToken(MediawikiParser.H1, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaintextContext plaintext() {
			return GetRuleContext<PlaintextContext>(0);
		}
		public Heading1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading1(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Heading1Context heading1() {
		Heading1Context _localctx = new Heading1Context(Context, State);
		EnterRule(_localctx, 16, RULE_heading1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			Match(H1);
			State = 128;
			plaintext();
			State = 129;
			Match(H1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Heading2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H2() { return GetTokens(MediawikiParser.H2); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H2(int i) {
			return GetToken(MediawikiParser.H2, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaintextContext plaintext() {
			return GetRuleContext<PlaintextContext>(0);
		}
		public Heading2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading2(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Heading2Context heading2() {
		Heading2Context _localctx = new Heading2Context(Context, State);
		EnterRule(_localctx, 18, RULE_heading2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			Match(H2);
			State = 132;
			plaintext();
			State = 133;
			Match(H2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Heading3Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H3() { return GetTokens(MediawikiParser.H3); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H3(int i) {
			return GetToken(MediawikiParser.H3, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaintextContext plaintext() {
			return GetRuleContext<PlaintextContext>(0);
		}
		public Heading3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading3; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading3(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Heading3Context heading3() {
		Heading3Context _localctx = new Heading3Context(Context, State);
		EnterRule(_localctx, 20, RULE_heading3);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			Match(H3);
			State = 136;
			plaintext();
			State = 137;
			Match(H3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Heading4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H4() { return GetTokens(MediawikiParser.H4); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H4(int i) {
			return GetToken(MediawikiParser.H4, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaintextContext plaintext() {
			return GetRuleContext<PlaintextContext>(0);
		}
		public Heading4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading4(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Heading4Context heading4() {
		Heading4Context _localctx = new Heading4Context(Context, State);
		EnterRule(_localctx, 22, RULE_heading4);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(H4);
			State = 140;
			plaintext();
			State = 141;
			Match(H4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Heading5Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] H5() { return GetTokens(MediawikiParser.H5); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode H5(int i) {
			return GetToken(MediawikiParser.H5, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaintextContext plaintext() {
			return GetRuleContext<PlaintextContext>(0);
		}
		public Heading5Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading5; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediawikiVisitor<TResult> typedVisitor = visitor as IMediawikiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading5(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Heading5Context heading5() {
		Heading5Context _localctx = new Heading5Context(Context, State);
		EnterRule(_localctx, 24, RULE_heading5);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			Match(H5);
			State = 144;
			plaintext();
			State = 145;
			Match(H5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
